# song-lyric-content-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/: artists.json
schemas/: base_schema.py  score_schema.py  song_schema.py
