[project]
name = "song-lyric-content-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "mcneelyad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lyricsgenius (>=3.12.0,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-core (>=2.46.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
